Move license data in the about dialog and fix button alignment

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -11,7 +11,7 @@ section {
 button.secondary {
   margin: 0 6px;
   position: relative;
-  top: -3px;
+  top: 5px;
 }
 
 div.strong-list p {
